# deep-ml

./: .gitignore  pyproject.toml
deep_ml/: REINFORCE.py  __init__.py  activations.py  best_gini_split.py  compressed_matrix.py  dropout.py  kmeans.py  layer_norm.py  leetcode.py  linear_regression.py  main.py  matrix_vector_dot.py  noisy_top_k_moe.py  optimal_string_alignment.py  optimization.py  positional_encoding.py  rouge.py  self_attention.py  simple_2d_conv.py  tf_idf.py  train_single_neuron.py
tests/: conftest.py  test_2d_conv.py  test_deep_ml.py  test_layer_norm.py  test_linear_regression.py  test_multiheadselfattn.py  test_osa.py  test_sparse_matrix.py  test_td_idf.py
